# hermes

./: CMakeLists.txt  OSX.cmake
cmake/: FindTRILINOS.cmake  (+1 more)
hermes2d/examples/neutronics/fixed-source/: CMakeLists.txt
hermes2d/examples/neutronics/fixed-source/Azmy/: CMakeLists.txt  definitions.cpp  domain.mesh  gen_D.m  main.cpp  problem_data.h
hermes2d/examples/neutronics/fixed-source/SN-Krylov/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  gen_D.m  main.cpp  pweights.m
hermes2d/examples/neutronics/fixed-source/SN-exact/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  exact.nb  main.cpp  problem_data.h
hermes2d/examples/neutronics/fixed-source/SN-first_attempt/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh.new  exact.nb  main.cpp  ordinates.nb  problem_data.h  square2.mesh
hermes2d/examples/neutronics/fixed-source/SN-second_attempt/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh.old  gen_D.m  main.cpp  ordinates.nb  problem_data.h
hermes2d/examples/neutronics/fixed-source/Watanabe_Maynard-1/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp  problem_data.h
hermes2d/examples/neutronics/fixed-source/Watanabe_Maynard-2/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  gen_D.m  main.cpp  problem_data.h
hermes2d/examples/neutronics/fixed-source/anisotropic-scattering/: definitions.cpp  main.cpp
hermes2d/examples/neutronics/fixed-source/boxes/: CMakeLists.txt  definitions.cpp  definitions.h  domain.geo  domain.msh  domain2.msh  gen_D.m  main.cpp  problem_data.h
hermes2d/examples/neutronics/fixed-source/deep-penetration/: definitions.h  main.cpp
hermes2d/examples/neutronics/fixed-source/fissioning-slab/: definitions.cpp  main.cpp
hermes2d/examples/neutronics/fixed-source/iron-water/: main.cpp
hermes_common/tests/timer/: CMakeLists.txt
(+218 files in other folders)
