project(test-time_period)

add_executable(${PROJECT_NAME} main.cpp)

set_property(TARGET ${PROJECT_NAME} PROPERTY COMPILE_FLAGS ${FLAGS})

if (HERMES_COMMON_RELEASE)
  target_link_libraries(${PROJECT_NAME} ${HERMES_COMMON_LIB_RELEASE} ${TRILINOS_LIBRARIES})
else (HERMES_COMMON_RELEASE)
  target_link_libraries(${PROJECT_NAME} ${HERMES_COMMON_LIB_DEBUG} ${TRILINOS_LIBRARIES})
endif (HERMES_COMMON_RELEASE)

set(BIN ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
